--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="row">
         <div class="col-1-4">
             <i class="custom-icon icon-businessman273">&#xe801;</i>
-            <p>Набор продуктов организации: чем меньше програмнных продуктов, тем проще взаимодействие, вследствие меньшего количества естественных барьеров описанных законом Конвея.</p>
+            <p>Набор продуктов организации: чем меньше программных продуктов, тем проще взаимодействие, вследствие меньшего количества естественных барьеров описанных законом Конвея.</p>
         </div>
 
         <div class="col-1-4">
@@ -183,9 +183,9 @@
         <div class="col-1-2">
             <h5><strong>Антипаттерн B:</strong> Отдельная DevOps команда</h5>
 
-            <p>Отдельная DevOps команда (Антипаттерн B) - типичный результат решения менеджера или исполнительного директора о том, что "нам нужно немного этого самого DevOps-а", и создания ’DevOps-команды’ (возможно полностью состоящей из так называемых ’DevOps-ов’). Члены DevOps-команды быстро изолируются, держась подальше от Разработки и Эксплуатации и закрывая в собственный уголок навыки и инструментарий от ’невежд из Разработки’ и ’динозавров из Эксплуатации’.</p>
+            <p>Отдельная DevOps команда (Антипаттерн B) - типичный результат решения менеджера или исполнительного директора о том, что "нам нужно немного этого самого DevOps-а", и создания ’DevOps команды’ (возможно полностью состоящей из так называемых ’DevOps-ов’). Члены DevOps команды быстро изолируются, держась подальше от Разработки и Эксплуатации и закрывая в собственный уголок навыки и инструментарий от ’невежд из Разработки’ и ’динозавров из Эксплуатации’.</p>
 
-            <p>Отдельная DevOps-команда действительно имеет смысл в случае, когда она создается временно, скажем, на срок не более 12 или 18 месяцев, с явной целью сблизить Разработку и Эксплуатацию и с явным распоряжением распустить DevOps-команду по истечении этого времени. Это образует то, что я называю <a href="#type-five">5-м Типом (Временная DevOps команда)</a>.</p>
+            <p>Отдельная DevOps команда действительно имеет смысл в случае, когда она создается временно, скажем, на срок не более 12 или 18 месяцев, с явной целью сблизить Разработку и Эксплуатацию и с явным распоряжением распустить DevOps команду по истечении этого времени. Это образует то, что я называю <a href="#type-five">5-м Типом (Временная DevOps команда)</a>.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -200,7 +200,7 @@
 
             <p>Эта структура - порождение сочетания наивности и высокомерия разработчиков и менеджеров от разработки, особенно в начале работы над новым проектом или системой. Решив, что Эксплуатация - это пережиток прошлого ("Теперь у нас есть Облака, ведь так?"), разработчики сильно недооценивают сложность и важность эксплуатационной деятельности и навыков, и верят, что они смогут обойтись без них или просто обретут их в свободное время.</p>
 
-            <p>Подобную DevOps структуру Антипаттерна C, вероятно, в конечном итоге, нужно будет преобразовать или в структуру <a href="#type-three">3-го Типа (Эксплуатация как 'Инфрраструктура-как-сервис')</a> или в структуру <a href="#type-four">4-го Типа (DevOps как внешний сервис)</a>, когда их продукт станет более сложным и эксплуатационная деятельность начнет поглощать время для разработки. Только если такие команды понимают, что Эксплуатация такая же важная и значительная область как и Разработка, они способны избежать сильной боли и ненужных (и довольно типичных) эксплуатационных ошибок.</p>
+            <p>Подобную DevOps структуру Антипаттерна C, вероятно, в конечном итоге, нужно будет преобразовать или в структуру <a href="#type-three">3-го Типа (Эксплуатация как 'Инфраструктура-как-сервис')</a> или в структуру <a href="#type-four">4-го Типа (DevOps как внешний сервис)</a>, когда их продукт станет более сложным и эксплуатационная деятельность начнет поглощать время для разработки. Только если такие команды понимают, что Эксплуатация такая же важная и значительная область как и Разработка, они способны избежать сильной боли и ненужных (и довольно типичных) эксплуатационных ошибок.</p>
         </div>
 
         <div class="col-1-2">
@@ -218,9 +218,9 @@
         <div class="col-1-2">
             <h5><strong>Антипаттерн D:</strong> DevOps как разработка инструментария</h5>
 
-            <p>Для того чтобы "стать DevOps" без потери текущей скорости команды разработки (доставлять функциональные возможности), DevOps-команда занимается работой над инструментарием, необходимым для пайплайнов разработки, управления конфигурацией, управления окружениями и т.д. В то же время, Эксплуатация продолжает быть в изоляции, а Разработка продолжает перебрасывать им приложения "через стену".</p>
+            <p>Для того чтобы "стать DevOps" без потери текущей скорости команды разработки (доставлять функциональные возможности), DevOps команда занимается работой над инструментарием, необходимым для пайплайнов разработки, управления конфигурацией, управления окружениями и т.д. В то же время, Эксплуатация продолжает быть в изоляции, а Разработка продолжает перебрасывать им приложения "через стену".</p>
 
-            <p>Хотя результом работы такой отдельной команды могут быть преимущества в виде улучшенного набора инструментов, ее влияние ограниченно. Фундаментальная проблема недостатка участия Эксплуатации и совместной работы в цикле разработки приложения осталась нерешённой.</p>
+            <p>Хотя результатом работы такой отдельной команды могут быть преимущества в виде улучшенного набора инструментов, ее влияние ограничено. Фундаментальная проблема недостатка участия Эксплуатации и совместной работы в цикле разработки приложения осталась нерешённой.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -257,7 +257,7 @@
 
             <p>Организация не хочет держать отдельную команду эксплуатации, поэтому команды разработки берут на себя ответственность за инфраструктуру, управление окружениями, мониторинг и т.д. Однако, делать это в рамках проекта или продукта, означает подвергнуть эти элементы ограничению ресурсов и изменению приоритетов, которые приведут к непостоянным и полузаконченным решениям.</p>
 
-            <p>В этом антипаттерне организация демонстрирует недооценку важности и навыков, требуемых для эффективной IT эсплуатации.</p>
+            <p>В этом антипаттерне организация демонстрирует недооценку важности и навыков, требуемых для эффективной IT эксплуатации.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -303,7 +303,7 @@
         <!--li><strong>Topologies</strong></li-->
         <li><a href="#type-one">1: Сотрудничество команд разработки и эксплуатации</a></li>
         <li><a href="#type-two">2: Полностью распределенные функции эксплуатации</a></li>
-        <li><a href="#type-three">3: Эксплуатация как 'Инфрраструктура-как-сервис' (IaaS)</a></li>
+        <li><a href="#type-three">3: Эксплуатация как 'Инфраструктура-как-сервис' (IaaS)</a></li>
         <li><a href="#type-four">4: DevOps как внешний сервис</a></li>
         <li><a href="#type-five">5: Временная DevOps команда</a></li>
         <li><a href="#type-six">6: Команда DevOps евангелистов</a></li>
@@ -321,7 +321,7 @@
             <h5><strong>Тип 1:</strong> Сотрудничество команд разработки и эксплуатации</h5>
             <p>Это 'земля обетованная' культуры DevOps: комфортное сотрудничество между командами разработки и командами эксплуатации, каждая из которых специализируется на своем, но, по мере необходимости, там где нужно. При этом, вероятно, есть много отдельных команд разработки, каждая из которых работает над отдельным или частично отдельным продуктовым стеком.</p>
 
-            <p>Я считаю, что модель 1-го Типа нуждается в достаточно существенных организационных изменениях для ее создания, а также в высокой степени компетентности в команде технического руководства. Разработка и эксплуатация должны иметь четко выраженную и очевидную полезную общую цель ('Доставка надежных, частых изменений' или что-то еще). Сотрудники команды эксплуатации должны уверенно сотрудничать с командой разработки, понимать и справляться с тестированием в разработке (test-driven), знать Git, а программисты должны серьезно относиться к эксплуатационным функциям и самостоятельно подключать сотрудников эксплуатации для реализации логгирования и так далее,  везде где необходимо изменение культуры из недавнего прошлого.</p>
+            <p>Я считаю, что модель 1-го Типа нуждается в достаточно существенных организационных изменениях для ее создания, а также в высокой степени компетентности в команде технического руководства. Разработка и эксплуатация должны иметь четко выраженную и очевидную полезную общую цель ('Доставка надежных, частых изменений' или что-то еще). Сотрудники команды эксплуатации должны уверенно сотрудничать с командой разработки, понимать и справляться с тестированием в разработке (test-driven), знать Git, а программисты должны серьезно относиться к эксплуатационным функциям и самостоятельно подключать сотрудников эксплуатации для реализации логирования и так далее,  везде где необходимо изменение культуры из недавнего прошлого.</p>
 
         </div>
 
@@ -355,7 +355,7 @@
             <h5><strong>Тип 2:</strong> Полностью распределенные функции эксплуатации</h5>
             <p>Там, где команда эксплуатации была интегрирована в группу разработки продуктов, мы видим топологию Типа 2. Между задачами разработки и эксплуатации мало разделения и все сотрудники сфокусированы на общей цели.  Это спорная форма <a href="#type-one">Тип 1 (Сотрудничество команд разработки и эксплуатации)</a>, но она имеет свои возможности.</p>
 
-            <p>Такие организации, как Netflix и Facebook, практически разрабатывающих один веб-продукт, реализовали эту топологию Типа 2, но я думаю, что это, вероятно, не очень удобно за пределами узкого целевого продукта, поскольку бюджетные ограничения и контекстное переключение обычно присутствуют в организации с несколькими цифровыми продуктами, что заставит их разделить разработку и эксплуатацию, скажем, обратно к <a href="#type-one">модели Типа 1</a>. Эта топология также может быть названа «NoOps», поскольку нет отдельной или видимой команды эксплуатации (хотя Netflix NoOps также может быть <a href="#type-three">Типом 3 (Эксплуатация как 'Инфрраструктура-как-сервис')</a>).</p>
+            <p>Такие организации, как Netflix и Facebook, практически разрабатывающих один веб-продукт, реализовали эту топологию Типа 2, но я думаю, что это, вероятно, не очень удобно за пределами узкого целевого продукта, поскольку бюджетные ограничения и контекстное переключение обычно присутствуют в организации с несколькими цифровыми продуктами, что заставит их разделить разработку и эксплуатацию, скажем, обратно к <a href="#type-one">модели Типа 1</a>. Эта топология также может быть названа «NoOps», поскольку нет отдельной или видимой команды эксплуатации (хотя Netflix NoOps также может быть <a href="#type-three">Типом 3 (Эксплуатация как 'Инфраструктура-как-сервис')</a>).</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -373,7 +373,7 @@
 
         <div id="type-three" class="row">
         <div class="col-1-2">
-            <h5><strong>Тип 3:</strong> Эксплуатация как 'Инфрраструктура-как-сервис' (IaaS)</h5>
+            <h5><strong>Тип 3:</strong> Эксплуатация как 'Инфраструктура-как-сервис' (IaaS)</h5>
             <p>Для организаций с довольно традиционным отделом ИТ эксплуатации, который не может или не будет быстро (достаточно быстро) изменяться, и для организаций, которые запускают все свои приложения в публичном облаке (Amazon EC2, Rackspace, Azure и т.д.), вероятно поможет рассматривать эксплуатацию как команду, которая просто обеспечивает гибкую инфраструктуру, на которой развертываются и запускаются приложения. Внутренняя команда эксплуатации, таким образом, прямо эквивалентна Amazon EC2 или Инфраструктура-как-сервис (Infrastructure-as-a-Service).</p>
 
             <p>Команда (возможно, виртуальная команда) разработки затем выступает в качестве источника знаний об эксплуатационных функциях, метриках, мониторинге, настройке серверов и т.д., и, вероятно, выполняет большую часть взаимодействия с командой IaaS. Тем не менее, эта команда по-прежнему является командой разработчиков, следует стандартным практикам, таким как TDD, CI, итеративное развитие, коучинг и т.д.</p>
@@ -412,7 +412,7 @@
 
             <p>Некоторые организации, в особенности небольшие, могут не располагать финансами, опытом или персоналом, чтобы взять на себя инициативу в аспектах эксплуатации продукта, который они производят. Команда разработки может обратиться к поставщику услуг вроде Rackspace с просьбой помочь им построить тестовые окружения и автоматизировать их инфраструктуру и мониторинг, а также консультировать по поводу эксплуатационных особенностей, которые необходимо реализовать в ходе цикла разработки продукта.</p>
 
-            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Эксплуатация как 'Инфрраструктура-как-сервис')</a> или даже <a href="#type-one">1-го Типа (Сотрудничество команд разработки и эксплуатации)</a> когда они расширятся наймут больше персонала с фокусом на эксплуатацию.</p>
+            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Эксплуатация как 'Инфраструктура-как-сервис')</a> или даже <a href="#type-one">1-го Типа (Сотрудничество команд разработки и эксплуатации)</a> когда они расширятся наймут больше персонала с фокусом на эксплуатацию.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -430,9 +430,9 @@
 
         <div id="type-five" class="row">
         <div class="col-1-2">
-            <h5><strong>5 Тип:</strong> DevOps-команда с ограниченным сроком действия</h5>
+            <h5><strong>5 Тип:</strong> DevOps команда с ограниченным сроком действия</h5>
 
-            <p>DevOps-команда с ограниченным сроком действия (5 Тип) в значительной степени похож на <a href="#anti-type-b">Антипаттерн B (Отдельная DevOps-команда)</a>, но цель и продолжительность её существования совершенно другие. У этой временной команды есть задача сблизить Разработку и Эксплуатацию, в идеале к модели <a href="#type-one">1 Типа (Сотрудничество команд разработки и эксплуатации)</a> или <a href="#type-two">2 Типа (Полностью распределенные функции эксплуатации)</a>, в конечном итоге став ненужной.</p>
+            <p>DevOps команда с ограниченным сроком действия (5 Тип) в значительной степени похож на <a href="#anti-type-b">Антипаттерн B (Отдельная DevOps команда)</a>, но цель и продолжительность её существования совершенно другие. У этой временной команды есть задача сблизить Разработку и Эксплуатацию, в идеале к модели <a href="#type-one">1 Типа (Сотрудничество команд разработки и эксплуатации)</a> или <a href="#type-two">2 Типа (Полностью распределенные функции эксплуатации)</a>, в конечном итоге став ненужной.</p>
 
             <p>Члены временной команды будут ‘переводчиками’ между Разработкой и Эксплуатацией, предлагая безумные идеи в виде stand-up-ов и Канбан'а для команды эксплуатации, и думая о неприличных деталях наподобие балансировщиков нагрузки, управления сетевыми интерфейсами и SSL-offloading'ом для команды Разработки. Если достаточно людей начинает видеть значительное сближение Разработки и Эксплуатации, то у временной команды есть реальный шанс достичь своей цели. Принципиально, что долгосрочная ответственность за развертывание и диагностику продуктового окружения не должна быть возложена на временную команду, иначе это становится похожим на <a href="#anti-type-b">Отдельную DevOps команду (Антипаттерн B).</a></p>
         </div>
@@ -468,7 +468,7 @@
         <div class="col-1-2">
             <h5><strong>Type 6:</strong> Команда DevOps евангелистов</h5>
 
-            <p>Внутри организаций, в которых существует огромный разрыв между Разработкой и Эксплуатацией (или склонность к образованию разрыва), может быть эффективно иметь 'вспомогательную' DevOps-команду, которая бы призывала Разработку и Эксплуатацию к диалогу. Это версия <a href="#type-five">5-го Типа (DevOps-команда с ограниченным сроком действия)</a>, но где DevOps-команда существует на постоянной основе с компетенцией содействия сотрудничеству и взаимодействию между Разработкой и Эксплуатацией. Членов этой команды иногда называют 'DevOps евангелистами', поскольку они помогают распространить понимание DevOps практик.</p>
+            <p>Внутри организаций, в которых существует огромный разрыв между Разработкой и Эксплуатацией (или склонность к образованию разрыва), может быть эффективно иметь 'вспомогательную' DevOps команду, которая бы призывала Разработку и Эксплуатацию к диалогу. Это версия <a href="#type-five">5-го Типа (DevOps команда с ограниченным сроком действия)</a>, но где DevOps команда существует на постоянной основе с компетенцией содействия сотрудничеству и взаимодействию между Разработкой и Эксплуатацией. Членов этой команды иногда называют 'DevOps евангелистами', поскольку они помогают распространить понимание DevOps практик.</p>
 
         </div>
 
@@ -530,7 +530,7 @@
         <div class="col-1-2">
             <h5><strong>8 Тип:</strong> Взаимодействие через контейнеры</h5>
 
-            <p>Контейнеры убирают необходимость в некоторых типах взаимодействия между Разработкой и Эксплуатацией перекладывая требования по развертыванию и сопровождению приложения на контейнер. В таком случае, контейнер выступает границей ответственности Разработки и Эксплуатации. В здоровой инженерной культуре, модель Взаимодействия через контенеры работает отлично, но если Разработка начинает игнорировать эксплуатационные особенности, такая модель может вернуться к противоречащему 'мы и они'.</p>
+            <p>Контейнеры убирают необходимость в некоторых типах взаимодействия между Разработкой и Эксплуатацией, перекладывая требования по развертыванию и сопровождению приложения на контейнер. В таком случае, контейнер выступает границей ответственности Разработки и Эксплуатации. В здоровой инженерной культуре, модель Взаимодействия через контейнеры работает отлично, но если Разработка начинает игнорировать эксплуатационные особенности, такая модель может вернуться к противоречащему 'мы и они'.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -552,7 +552,7 @@
         <div class="col-1-2">
             <h5><strong>9 Тип:</strong> Взаимодействие Разработки и DBA </h5>
 
-            <p>Для того чтобы преодолеть разрыв между Разработкой и DBA, некоторые организации экспериментировали с чем-то вроде структурой 9-го Типа, где возможности баз данных от DBA складываются с возможностями (или специализацией) от команды Разработки. Похоже, что это помогает перейти с Dev-ориентированного представления баз данных (по сути, просто тупое храненилище для приложений) на DBA-ориентированное (интеллектуальные, богатые источники бизнес-ценности).</p>
+            <p>Для того чтобы преодолеть разрыв между Разработкой и DBA, некоторые организации экспериментировали с чем-то вроде структурой 9-го Типа, где возможности баз данных от DBA складываются с возможностями (или специализацией) от команды Разработки. Похоже, что это помогает перейти с Dev-ориентированного представления баз данных (по сути, просто тупое хранилище для приложений) на DBA-ориентированное (интеллектуальные, богатые источники бизнес-ценности).</p>
         </div>
 
         <div class="col-1-2">
