--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<meta name="theme-color" content="#ffffff">
 	<meta property="og:title" content="DevOps Топологии" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://web.devopstopologies.com" />
-	<meta property="og:image" content="http://web.devopstopologies.com/images/type-1.png" />
+	<meta property="og:url" content="http://devopstopologies.ru" />
+	<meta property="og:image" content="http://devopstopologies.ru/images/type-1.png" />
 	<meta property="og:description" content="Основная цель DevOps в любой организации - улучшить качество поставки ценности клиентам и бизнесу, а не уменьшить расходы, улучшить автоматизацию или контролировать все из системы управления конфигурацией. Следовательно, для эффективного взаимодействия разработчиков (Dev) и эксплуатации (Ops) в разных организациях нужны разные структуры команд." />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -583,7 +583,7 @@
         <p>Встречали ли вы структуру команды не описанную здесь?</p>
         <p>Какой инструмент для построения диаграмм нам лучше использовать? <!--a href="http://casual-effects.com/markdeep/">Markdeep</a>? <a href="http://www.w3schools.com/svg/">SVG</a>?<--></p>
 
-        <a class="button blue" href="http://web.devopstopologies.com/#disqus_thread">Обсудить</a>
+        <a class="button blue" href="http://devopstopologies.ru/#disqus_thread">Обсудить</a>
         </div>
         <div class="col-1-3">
         <h4>Внеси свой вклад</h4>
