Добавил Игоря в список переводчиков, он же сделал кучу правок

--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
               <li><a href="https://github.com/postgred">Андрей Александров</a></li>
               <li><a href="https://github.com/maxim0r">Максим Орешников</a></li>
               <li><a href="https://github.com/vitkhab">Виталий Хабаров</a></li>
+              <li><a href="https://github.com/ikurochkin">Игорь Курочкин</a></li>
             </ul>
 
         </div>
