--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="col-1-2">
             <h5><strong>Антипаттерн A:</strong> Изоляция Разработки и Эксплуатации</h5>
 
-            <p>Это классическая схема с ‘перебрасыванием через стену‘ между Разработкой и Эксплуатацией. Она означает, что задачи могут быть закрыты преждевременно (статус СДЕЛАНО означает, что ‘фича готова‘, но не что она работает в производственном окружении), и работоспособность продукта страдает из-за того, что у Разработки недостаточно контекста об эксплуатационных особенностях, а у Эксплуатации нет времени или желания связываться с Разработкой, чтобы решить проблемы до того, как продукт будет запущен</p>
+            <p>Это классическая схема с ‘перебрасыванием через стену‘ между Разработкой и Эксплуатацией. Она означает, что задачи могут быть закрыты преждевременно (статус СДЕЛАНО означает, что ‘фича готова‘, но не что она работает в производственном окружении), и работоспособность продукта страдает из-за того, что у Разработки недостаточно контекста об эксплуатационных особенностях, а у Эксплуатации нет времени или желания связываться с Разработкой, чтобы решить проблемы до того, как продукт будет запущен.</p>
 
             <p>Вероятно, всем понятно, что это плохая структура, но я, на самом деле, считаю, что имеют место быть и худшие структуры. В случае Антипаттерна А (Изоляция Разработки и Эксплуатации) мы хотя бы знаем, что здесь есть проблема.</p>
         </div>
@@ -183,7 +183,7 @@
         <div class="col-1-2">
             <h5><strong>Антипаттерн B:</strong> Отдельная DevOps команда</h5>
 
-            <p>Отдельная DevOps команда (Антипаттерн B) - типичный результат решения менеджера или исполнительного директора о том, что "нам нужно немного этого самого DevOps-а", и создания ’DevOps команды’ (возможно полностью состоящей из так называемых ’DevOps-ов’). Члены DevOps команды быстро изолируются, держась подальше от Разработки и Эксплуатации и закрывая в собственный уголок навыки и инструментарий от ’невежд из Разработки’ и ’динозавров из Эксплуатации’.</p>
+            <p>Отдельная DevOps команда (Антипаттерн B)&nbsp;&mdash; типичный результат решения менеджера или исполнительного директора о том, что "нам нужно немного этого самого DevOps-а", и создания ’DevOps команды’ (возможно полностью состоящей из так называемых ’DevOps-ов’). Члены DevOps команды быстро изолируются, держась подальше от Разработки и Эксплуатации и закрывая в собственный уголок навыки и инструментарий от ’невежд из Разработки’ и ’динозавров из Эксплуатации’.</p>
 
             <p>Отдельная DevOps команда действительно имеет смысл в случае, когда она создается временно, скажем, на срок не более 12 или 18 месяцев, с явной целью сблизить Разработку и Эксплуатацию и с явным распоряжением распустить DevOps команду по истечении этого времени. Это образует то, что я называю <a href="#type-five">5-м Типом (Временная DevOps команда)</a>.</p>
         </div>
@@ -321,7 +321,7 @@
             <h5><strong>Тип 1:</strong> Сотрудничество команд разработки и эксплуатации</h5>
             <p>Это 'земля обетованная' культуры DevOps: комфортное сотрудничество между командами разработки и командами эксплуатации, каждая из которых специализируется на своем, но, по мере необходимости, там где нужно. При этом, вероятно, есть много отдельных команд разработки, каждая из которых работает над отдельным или частично отдельным продуктовым стеком.</p>
 
-            <p>Я считаю, что модель 1-го Типа нуждается в достаточно существенных организационных изменениях для ее создания, а также в высокой степени компетентности в команде технического руководства. Разработка и эксплуатация должны иметь четко выраженную и очевидную полезную общую цель ('Доставка надежных, частых изменений' или что-то еще). Сотрудники команды эксплуатации должны уверенно сотрудничать с командой разработки, понимать и справляться с тестированием в разработке (test-driven), знать Git, а программисты должны серьезно относиться к эксплуатационным функциям и самостоятельно подключать сотрудников эксплуатации для реализации логирования и так далее,  везде где необходимо изменение культуры из недавнего прошлого.</p>
+            <p>Я считаю, что модель 1-го Типа нуждается в достаточно существенных организационных изменениях для ее создания, а также в высокой степени компетентности в команде технического руководства. Разработка и эксплуатация должны иметь четко выраженную и очевидную полезную общую цель ('Доставка надежных, частых изменений' или что-то еще). Сотрудники команды эксплуатации должны уверенно сотрудничать с командой разработки, понимать и справляться с тестированием в разработке (test-driven), знать Git, а программисты должны серьезно относиться к эксплуатационным функциям и самостоятельно подключать сотрудников эксплуатации для реализации логирования и так далее,  везде, где необходимо изменение культуры из недавнего прошлого.</p>
 
         </div>
 
@@ -374,7 +374,7 @@
         <div id="type-three" class="row">
         <div class="col-1-2">
             <h5><strong>Тип 3:</strong> Эксплуатация как 'Инфраструктура-как-сервис' (IaaS)</h5>
-            <p>Для организаций с довольно традиционным отделом ИТ эксплуатации, который не может или не будет быстро (достаточно быстро) изменяться, и для организаций, которые запускают все свои приложения в публичном облаке (Amazon EC2, Rackspace, Azure и т.д.), вероятно поможет рассматривать эксплуатацию как команду, которая просто обеспечивает гибкую инфраструктуру, на которой развертываются и запускаются приложения. Внутренняя команда эксплуатации, таким образом, прямо эквивалентна Amazon EC2 или Инфраструктура-как-сервис (Infrastructure-as-a-Service).</p>
+            <p>Для организаций с довольно традиционным отделом ИТ эксплуатации, который не может или не будет быстро (достаточно быстро) изменяться, и для организаций, которые запускают все свои приложения в публичном облаке (Amazon EC2, Rackspace, Azure и т.д.), вероятно, поможет рассматривать эксплуатацию как команду, которая просто обеспечивает гибкую инфраструктуру, на которой развертываются и запускаются приложения. Внутренняя команда эксплуатации, таким образом, прямо эквивалентна Amazon EC2 или Инфраструктура-как-сервис (Infrastructure-as-a-Service).</p>
 
             <p>Команда (возможно, виртуальная команда) разработки затем выступает в качестве источника знаний об эксплуатационных функциях, метриках, мониторинге, настройке серверов и т.д., и, вероятно, выполняет большую часть взаимодействия с командой IaaS. Тем не менее, эта команда по-прежнему является командой разработчиков, следует стандартным практикам, таким как TDD, CI, итеративное развитие, коучинг и т.д.</p>
 
@@ -412,7 +412,7 @@
 
             <p>Некоторые организации, в особенности небольшие, могут не располагать финансами, опытом или персоналом, чтобы взять на себя инициативу в аспектах эксплуатации продукта, который они производят. Команда разработки может обратиться к поставщику услуг вроде Rackspace с просьбой помочь им построить тестовые окружения и автоматизировать их инфраструктуру и мониторинг, а также консультировать по поводу эксплуатационных особенностей, которые необходимо реализовать в ходе цикла разработки продукта.</p>
 
-            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Эксплуатация как 'Инфраструктура-как-сервис')</a> или даже <a href="#type-one">1-го Типа (Сотрудничество команд разработки и эксплуатации)</a> когда они расширятся наймут больше персонала с фокусом на эксплуатацию.</p>
+            <p>То, что можно назвать DevOps-as-a-Service, может быть успешным и прагматичным выбором для маленьких организаций или команд, чтобы научиться автоматизации, мониторингу и управлению конфигурацией, и затем, возможно, перейти к модели <a href="#type-three">3-го Типа (Эксплуатация как 'Инфраструктура-как-сервис')</a> или даже <a href="#type-one">1-го Типа (Сотрудничество команд разработки и эксплуатации)</a>, когда они расширятся и наймут больше персонала с фокусом на эксплуатацию.</p>
         </div>
 
         <div class="col-1-2 hidden-desktop">
@@ -434,7 +434,7 @@
 
             <p>DevOps команда с ограниченным сроком действия (5 Тип) в значительной степени похож на <a href="#anti-type-b">Антипаттерн B (Отдельная DevOps команда)</a>, но цель и продолжительность её существования совершенно другие. У этой временной команды есть задача сблизить Разработку и Эксплуатацию, в идеале к модели <a href="#type-one">1 Типа (Сотрудничество команд разработки и эксплуатации)</a> или <a href="#type-two">2 Типа (Полностью распределенные функции эксплуатации)</a>, в конечном итоге став ненужной.</p>
 
-            <p>Члены временной команды будут ‘переводчиками’ между Разработкой и Эксплуатацией, предлагая безумные идеи в виде stand-up-ов и Канбан'а для команды эксплуатации, и думая о неприличных деталях наподобие балансировщиков нагрузки, управления сетевыми интерфейсами и SSL-offloading'ом для команды Разработки. Если достаточно людей начинает видеть значительное сближение Разработки и Эксплуатации, то у временной команды есть реальный шанс достичь своей цели. Принципиально, что долгосрочная ответственность за развертывание и диагностику продуктового окружения не должна быть возложена на временную команду, иначе это становится похожим на <a href="#anti-type-b">Отдельную DevOps команду (Антипаттерн B).</a></p>
+            <p>Члены временной команды будут ‘переводчиками’ между Разработкой и Эксплуатацией, будут предлагать безумные идеи в виде stand-up-ов и Канбан'а для команды эксплуатации, и будут думать о неприличных деталях наподобие балансировщиков нагрузки, управления сетевыми интерфейсами и SSL-offloading'ом для команды Разработки. Если достаточно людей начинает видеть значительное сближение Разработки и Эксплуатации, то у временной команды есть реальный шанс достичь своей цели. Принципиально, что долгосрочная ответственность за развертывание и диагностику продуктового окружения не должна быть возложена на временную команду, иначе это становится похожим на <a href="#anti-type-b">Отдельную DevOps команду (Антипаттерн B).</a></p>
         </div>
 
         <div class="col-1-2">
